[project]
name = "youtube-thumbnail-designer"
version = "0.1.0"
description = "A LangGraph reflexion agent that designs, critiques, and improves YouTube thumbnails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.74",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
]
